--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <allureversion>2.28.1</allureversion>
         <commons-io>2.16.1</commons-io>
         <aspectj.version>1.9.20.1</aspectj.version>
+        <shutterBugVersion>1.6</shutterBugVersion>
 
     </properties>
 
@@ -114,6 +115,17 @@
             <version>${aspectj.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.assertthat</groupId>
+            <artifactId>selenium-shutterbug</artifactId>
+            <version>${shutterBugVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.seleniumhq.selenium</groupId>
+                    <artifactId>selenium-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
     </dependencies>
 
